Fix things Copilot found